--- a/Config/infra1/k8s-dev/product-service.deployment.yaml
+++ b/Config/infra1/k8s-dev/product-service.deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: product-service
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -51,8 +52,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: product-service
+  namespace: dev
 spec:
-  type: ClusterIP
   ports:
   - name: http
     port: 3002
