--- a/Config/infra1/k8s-dev/store-front.deployment.yaml
+++ b/Config/infra1/k8s-dev/store-front.deployment.yaml
@@ -3,8 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: store-front
+  namespace: dev
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: store-front
@@ -17,7 +18,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: store-front
-        image: harbor.thienngo.click/devsecops/microservice/store-front:21
+        image: harbor.thienngo.click/devsecops/microservice/store-front:72
         ports:
         - containerPort: 8080
           name: store-front
@@ -61,10 +62,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: store-front
+  namespace: dev
 spec:
   ports:
   - port: 80
     targetPort: 8080
   selector:
     app: store-front
-  type: LoadBalancer
