--- a/Config/infra1/k8s-prod/order-service.deployment.yaml
+++ b/Config/infra1/k8s-prod/order-service.deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: order-service
+  namespace: prod
 spec:
   replicas: 1
   selector:
@@ -17,7 +18,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: order-service
-        image: harbor.thienngo.click/devsecops/microservice/order-service:21
+        image: harbor.thienngo.click/devsecops/microservice/order-service:37
         ports:
         - containerPort: 3000
         env:
@@ -74,13 +75,16 @@ spec:
           limits:
             cpu: 75m
             memory: 128Mi    
+            # Sử dụng imagePullSecrets để ArgoCD có thể pull image từ Harbor
+      imagePullSecrets:
+      - name: harbor-registry-secret
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: order-service
+  namespace: prod
 spec:
-  type: ClusterIP
   ports:
   - name: http
     port: 3000
