--- a/Config/infra1/k8s-prod/rabbitmq.yaml
+++ b/Config/infra1/k8s-prod/rabbitmq.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: rabbitmq
-  namespace: prod
+  namespace: testing
 spec:
   serviceName: rabbitmq
   replicas: 1
@@ -63,7 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq
-  namespace: prod
+  namespace: testing
 spec:
   selector:
     app: rabbitmq
