--- a/Config/infra1/k8s-prod/ingress.yaml
+++ b/Config/infra1/k8s-prod/ingress.yaml
@@ -2,17 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: microservices-ingress
-  namespace: prod
+  namespace: testing
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
-    - lixsong.click
-    secretName: lixsong-click-tls
+    - longndb.site
+    secretName: longndb-site-tls
   rules:
-  - host: lixsong.click
+  - host: longndb.site
     http:
       paths:
         - pathType: Prefix
