--- a/Config/infra1/k8s-prod/product-service.deployment.yaml
+++ b/Config/infra1/k8s-prod/product-service.deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: product-service
-  namespace: prod
+  namespace: testing
 spec:
   replicas: 1
   selector:
@@ -52,7 +52,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: product-service
-  namespace: prod
+  namespace: testing
 spec:
   ports:
   - name: http
