--- a/Config/infra1/k8s-prod/store-front.deployment.yaml
+++ b/Config/infra1/k8s-prod/store-front.deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: store-front
-  namespace: prod
+  namespace: testing
 spec:
   replicas: 2
   selector:
@@ -62,7 +62,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: store-front
-  namespace: prod
+  namespace: testing
 spec:
   ports:
   - port: 80
