--- a/Config/infra1/k8s-test/rabbitmq.yaml
+++ b/Config/infra1/k8s-test/rabbitmq.yaml
@@ -57,7 +57,7 @@ data:
 kind: ConfigMap
 metadata:
   name: rabbitmq-enabled-plugins   
-  namespace: prod         
+  namespace: testing        
 ---
 apiVersion: v1
 kind: Service
