--- a/Config/infra1/k8s-test/order-service.deployment.yaml
+++ b/Config/infra1/k8s-test/order-service.deployment.yaml
@@ -77,7 +77,7 @@ spec:
             memory: 128Mi    
             # Sử dụng imagePullSecrets để ArgoCD có thể pull image từ Harbor
       imagePullSecrets:
-      - name: harbor-registry-secret
+      - name: harbor-cred
 ---
 apiVersion: v1
 kind: Service
