--- a/Config/infra1/k8s-test/store-front.deployment.yaml
+++ b/Config/infra1/k8s-test/store-front.deployment.yaml
@@ -57,6 +57,8 @@ spec:
           periodSeconds: 3
         securityContext: 
           allowPrivilegeEscalation: false
+      imagePullSecrets:
+      - name: harbor-cred
 ---
 apiVersion: v1
 kind: Service
